5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1575_1329.log
== TEST (2019-03-28 11:14:09) 
-- CODE:
var1 180 / 4
print(var1)
-- ERROR:
File "XXXX", line 1
    var1 180 / 4
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:14:43) 
-- CODE:
var1 = 180 / 4
print(var1)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:14:49) 
-- CODE:
var1 = 180 / 4
print(var1)
-- EXECUTION TIME:
0.120558
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:14:00) 
-- CODE:
var1 = 180 / 4
print(var1)
-- EXECUTION TIME:
0.169355
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:17:52) 
-- CODE:
var1 = 180 / 4
print(var1)
-- EXECUTION TIME:
0.142611
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:54:53) 
-- CODE:
# Variavel
Amigos = 4
Conta = 180
# Variavel de divisão
Divisao = Amigos / conta
# Saida
print(Divisao)
-- EXECUTION TIME:
0.150761
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1329/main.py", line 5, in <module>
    Divisao = Amigos / conta
NameError: name 'conta' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:54:55) 
-- CODE:
# Variavel
Amigos = 4
Conta = 180
# Variavel de divisão
Divisao = Amigos / conta
# Saida
print(Divisao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Divisao = Amigos / conta
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:55:06) 
-- CODE:
# Variavel
Amigos = 4
Conta = 180
# Variavel de divisão
Divisao = Amigos / Conta
# Saida
print(Divisao)
-- OUTPUT:
0.022222222222222223
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:55:08) 
-- CODE:
# Variavel
Amigos = 4
Conta = 180
# Variavel de divisão
Divisao = Amigos / Conta
# Saida
print(Divisao)
-- EXECUTION TIME:
0.132048
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
0.022222222222222223
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:55:32) 
-- CODE:
# Variavel
Amigos = 4
Conta = 180
# Variavel de divisão
Divisao = Amigos / Conta
# Saida
print(Divisao)
-- OUTPUT:
0.022222222222222223
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:55:51) 
-- CODE:
# Variavel
Amigos = 4
Conta = 180
# Variavel de divisão
Divisao = Conta / Amigos
# Saida
print(Divisao)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:55:53) 
-- CODE:
# Variavel
Amigos = 4
Conta = 180
# Variavel de divisão
Divisao = Conta / Amigos
# Saida
print(Divisao)
-- EXECUTION TIME:
0.1823
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
